<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/register_account"
        android:title="@string/add_account"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/remove_all"
        android:title="@string/remove_all"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item android:id="@+id/categories"
        android:title="@string/categories"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
